updated to "Methods used to date"

--- a/case-studies/posts/2023/08/21/01-purchase-to-plate.qmd
+++ b/case-studies/posts/2023/08/21/01-purchase-to-plate.qmd
@@ -8,35 +8,38 @@ categories:
   # - Culture
   # - Regulation
 author: Andrea Carlson and Thea Palmer Zimmerman
-date: 05/XX/2023
+date: 21/08/2023
 toc: true
+bibliography: references.bib
 # image: images/stephanie-hare-bw.png
 # image-alt: Photo of Stephanie Hare by Mitzi de Margary. Photo supplied by Stephanie Hare, used with permission.
 # format:
 #   html:
 #     embed-resources: true  
 ---
-::: {.callout-important}
+::: {.callout-important style="margin-top: 0;"}
 ## Disclaimer
 The findings and conclusions in this publication are those of the authors and should not be construed to represent any official USDA or US Government determination or policy. This research was supported by the US Department of Agriculture’s Economic Research Service and Center for Nutrition, Policy and Promotion. Findings should not be attributed to IRI.
 :::
 
-About 600,000 deaths per year in the United States are related to poor dietary choices. Many other individuals suffer from diet-related health conditions, which may limit their ability to work, learn, and be physically active **[1]**. In recognition of the link between diet and health, in 1974 the Senate Select Committee on Nutrition and Human Needs, originally formed to eliminate hunger, expanded its focus to improving eating habits, nutrition policy and the national diet. Since 1980 the Dietary Guidelines for Americans have been released every five years by the US Departments of Agriculture (USDA) and Health and Human Services (DHHS). The guidelines present “[advice on what to eat and drink to meet nutrient needs, promote health, and prevent disease](https://www.dietaryguidelines.gov/)”. 
+About 600,000 deaths per year in the United States are related to chronic diseases that are linked to poor dietary choices. Many other individuals suffer from diet-related health conditions, which may limit their ability to work, learn, and be physically active [@usda_2020]. In recognition of the link between diet and health, in 1974 the Senate Select Committee on Nutrition and Human Needs, originally formed to eliminate hunger, expanded its focus to improving eating habits, nutrition policy and the national diet. Since 1980, the Dietary Guidelines for Americans have been released every five years by the US Departments of Agriculture (USDA) and Health and Human Services (DHHS). The guidelines present “[advice on what to eat and drink to meet nutrient needs, promote health, and prevent disease](https://www.dietaryguidelines.gov/)”. 
 
 Because there can be economic and social barriers to maintaining a healthy diet, USDA promotes [Food and Nutrition Security](https://www.usda.gov/nutrition-security) so that everyone has consistent and equitable access to healthy, safe, and affordable foods that promote optimal health and well-being. A set of data tools called the [Purchase to Plate Suite](https://www.ers.usda.gov/data-products/purchase-to-plate/) (PPS) supports these goals by enabling the update of the [Thrifty Food Plan](https://www.fns.usda.gov/snap/thriftyfoodplan#:~:text=What%20is%20the%20Thrifty%20Food,lowest%20cost%20of%20the%20four.) (TFP), which estimates how much a budget-conscious family of four needs to spend on groceries to ensure a healthy diet. The TFP market basket – consisting of the specific amounts of various food categories required by the plan – forms the basis of the maximum allotment for the Supplemental Nutrition Assistance Program (SNAP, formerly known as the “Food Stamps” program), which provided financial support towards the cost of groceries for [over 41 million individuals in almost 22 million households in fiscal year 2022](https://www.fns.usda.gov/pd/supplemental-nutrition-assistance-program-snap).
 
-The 2018 Farm Act (Agriculture Improvement Act of 2018) requires that USDA reevaluate the TFP every five years using current food composition, consumption patterns, dietary guidance, and food prices, and using approved scientific methods. USDA’s Economic Research Service was charged with estimating the current food prices using retail food scanner data and utilized the PPS for this task. The most recent TFP update was released in August 2021 and the revised cost of the market basket was the first non-inflation adjustment increase in benefits for SNAP in over 40 years **[2]**.
+The 2018 Farm Act (Agriculture Improvement Act of 2018) requires that USDA reevaluate the TFP every five years using current food composition, consumption patterns, dietary guidance, and food prices, and using approved scientific methods. USDA’s Economic Research Service (ERS) was charged with estimating the current food prices using retail food scanner data [@levin_et_al_2018; @muth_et_al_2016] and utilized the PPS for this task. The most recent TFP update was released in August 2021 and the revised cost of the market basket was the first non-inflation adjustment increase in benefits for SNAP in over 40 years [@thrifty_food_plan_2021].
 
 The PPS combines data sets to enhance research related to the economics of food and nutrition. There are four primary components of the suite:
 
--	Purchase to Plate Crosswalk (PPC);
--	Purchase to Plate Price Tool (PPPT);
--	Purchase to Plate National Average Prices (PP-NAP) for the National Health and Nutrition Examination Survey (NHANES); 
+-	Purchase to Plate Crosswalk (PPC),
+-	Purchase to Plate Price Tool (PPPT),
+-	Purchase to Plate National Average Prices (PP-NAP) for the National Health and Nutrition Examination Survey (NHANES), and 
 -	Purchase to Plate Ingredient Tool (PPIT).
 
-The PPC allows researchers to measure the healthfulness of store purchases. PPC also forms the basis of the price tool, PPPT – which allows researchers to estimate custom prices for dietary recall studies – and a new ERS data product, the [PP-NAP](https://www.ers.usda.gov/data-products/purchase-to-plate/). The national average prices from PP-NAP are used in reevaluating the TFP. The final part of the Purchase to Plate Suite, the ingredient tool (PPIT), breaks dietary recall-reported foods back into purchasable ingredients, based on US retail food purchases. More information on the development of the PPC is available in two papers by Carlson et al. **[3, 4]**.
+The PPC allows researchers to measure the healthfulness of store purchases. On average [US consumers acquire about 75% of their calories from retail stores](https://www.ers.usda.gov/data-products/foodaps-national-household-food-acquisition-and-purchase-survey/summary-findings/#calories), and there are a number of studies linking the availability of foods at home to the healthfulness of the overall diet (e.g. @gattshall_et_al_2008 and @hanson_et_al_2005). Thus, understanding the healthfulness of store purchases allows us to understand differences in consumers who purchase healthy versus less healthy foods, and may contribute to better policies that promote healthier food purchases. While healthier diets are linked to a lower risk of disease outcomes [@REEDY2014881], other factors such as health care access may contribute [@cleary_et_al_2022]. The PPC also forms the basis of the price tool, PPPT – which allows researchers to estimate custom prices for dietary recall studies – and a new ERS data product, the [PP-NAP](https://www.ers.usda.gov/data-products/purchase-to-plate/). The national average prices from PP-NAP are used in reevaluating the TFP. By using the PP-NAP with 24-hour dietary recall information from surveys such as What We Eat in America ([WWEIA](https://www.ars.usda.gov/northeast-area/beltsville-md-bhnrc/beltsville-human-nutrition-research-center/food-surveys-research-group/docs/wweianhanes-overview/)) -- the dietary component of the nationally representative [National Health and Nutrition Examination Survey](https://www.cdc.gov/nchs/nhanes/index.htm)(NHANES)[^1] -- researchers can examine the relationship between the cost of food, dietary intake, and chronic diseases linked to poor diets. The price estimates also allow researchers to develop cost-effective healthy diets such as [MyPlate Kitchen](https://www.myplate.gov/myplate-kitchen/recipes). The final part of the Purchase to Plate Suite, the ingredient tool (PPIT), breaks dietary recall-reported foods back into purchasable ingredients, based on US retail food purchases. The PPIT is also used in the revaluation of the TFP, and by researchers who want to look at the relationship between reported ingestion of grocery items, cost and disease outcomes using WWEIA/NHANES. More information on the development of the PPC is available in two papers by Carlson et al. [-@carlson_et_al_2019; -@carlson_et_al_2022].
 
-The Food for Thought competition aimed to support the development of the PPC – and thus policy-oriented research – by linking retail food scanner data to the USDA nutrition data used to analyze NHANES dietary recall data, specifically the Food and Nutrient Database for Dietary Studies (FNDDS) **[5, 6]**. In particular, the competition set out to use artificial intelligence (AI) to reduce human resources in creating the links for the PPC, while still maintaining the high-quality standards required for reevaluating the TFP and for data published by ERS (which is one of 13 Principle Statistical Agencies in the United States Federal Government).
+[^1]: NHANES is a multi-module continuous survey conducted by the Centers for Disease Control and Prevention. In addition to the WWEIA, the study includes a four-hour complete medical exam including a health history, and a blood and urine analysis.
+
+The Food for Thought competition aimed to support the development of the PPC – and thus policy-oriented research – by linking retail food scanner data to the USDA nutrition data used to analyze NHANES dietary recall data, specifically the Food and Nutrient Database for Dietary Studies (FNDDS) [-@fndds_2018; -@fndds_2020]. In particular, the competition set out to use artificial intelligence (AI) to reduce human resources in creating the links for the PPC, while still maintaining the high-quality standards required for reevaluating the TFP and for data published by ERS (which is one of 13 Principle Statistical Agencies in the United States Federal Government).
 
 ## Methods used to date
 On the surface, the linking process may appear simple: both the FNDDS and retail food scanner data are databases of food. But the scanner data are produced for market research, and the FNDDS for dietary studies. The scanner data include about 350,000 items with sales each year, while the FNDDS has only 10,000–15,000 items.  Scanner data relates to specific products, while FNDDS items are often more general. To allow researchers to import the FNDDS nutrient data into the scanner data, a one-to-many match between FNDDS and scanner data items was needed. In addition, the food descriptions in the scanner data include brand names and package sizes and are written as a consumer would pronounce them – e.g., fresh and crisp broccoli florets, ready-cut, 10 oz – versus a more general FNDDS description such as “Broccoli, raw”. (Also linked to the “Broccoli, raw” code would be broccoli sold with stems attached, broccoli spears, and any other way raw broccoli is sold.) Before development of the PPC, there were no established linking identifiers.
@@ -101,15 +104,3 @@ How to cite
 
 ## Acknowledgements
 The research presented in this compendium supports the Purchase to Plate Suite of data products. Carlson has been privileged to both develop and lead this project over the course of her career, but it is not a solo project. Many thanks to the Linkages Team from USDA’s Economic Research Service (Christopher Lowe, Mark Denbaly Elina Page, and Catherine Cullinane Thomas) the Center for Nutrition Policy and Promotion (Kristin Koegel, Kevin Kuczynski, Kevin Meyers Mathieu, TusaRebecca Pannucci), and our contractor Westat, Inc. (Thea Palmer Zimmerman, Carina E. Tornow, Amber Brown McFadden, Caitlin Carter, Viji Narayanaswamy, Lindsay McDougal, Elisha Lubar, Lynnea Brumby, Raquel Brown, and Maria Tamburri). Many others have supported this project over the years.
-
-<!-- Build references.bib for article collection -->
-
-## References
-1.	US Department of Agriculture, and US Department of Health and Human Services. 2020. Dietary Guidelines for Americans, 2020-2025, 9th Edition.
-2.	U.S. Department of Agriculture. 2021. Thrifty Food Plan, 2021, Food and Nutrition Service.
-3. 	Carlson, A.C., E.T. Page, T.P. Zimmerman, C.E. Tornow, and S. Hermansen. 2019. Linking USDA Nutrition Databases to IRI Household-Based and Store-Based Scanner Data, Technical Bulletin Number 1952, U.S. Department of Agriculture, Economic Research Service.
-4.	Carlson, A.C., C.E. Tornow, E.T. Page, A. Brown McFadden, and T. Palmer Zimmerman. 2022. “Development of the Purchase to Plate Crosswalk and Price Tool: Estimating Prices for the National Health and Nutrition Examination Survey (NHANES) Foods and Measuring the Healthfulness of Retail Food Purchases,” Journal of Food Composition and Analysis 106:104344.
-5.	U. S. Department of Agriculture, and Agricultural Research Service. 2018. USDA Food and Nutrient Database for Dietary Studies 2015-16, 
-6.	U. S. Department of Agriculture, and Agricultural Research Service. 2020. USDA Food and Nutrient Database for Dietary Studies 2017-18, 
-7.	Levin, D., D. Noriega, C. Dicken, A. Okrent, M. Harding, and M. Lovenheim. 2018. Examining Store Scanner Data: A Comparison of the IRI Infoscan Data with Other Data Sets, 2008-12, TB-1949, U.S. Department of Agriculture, Economic Research Service.
-8.	Muth, M.K., M. Sweitzer, D. Brown, K. Capogrossi, S. Karns, D. Levin, A. Okrent, P. Siegel, and C. Zhen. 2016. Understanding IRI Household-Based and Store-Based Scanner Data, TB-1942, U.S. Department of Agriculture, Economic Research Service.
